@@ -13,5 +13,10 @@ JDK: it must be used with Java 8 or above<p>
   <img src="https://github.com/LeshLiao/AdbController/blob/main/media/02.png" height="297">
 </p>
 
+```
+Eclipse -> Run Configurations -> Arguments -> VM Arguments
+--module-path "C:\Program Files\Java\javafx-sdk-11.0.2\lib" --add-modules=javafx.controls,javafx.fxml,javafx.swing
+```
+
 # Reference
 This project was integrated with by [adbcontrol](http://marian.schedenig.name/2014/07/03/remote-control-your-android-phone-through-adb/) - Marian Schedenig
